Fixed footer issue on mobile

--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -44,8 +44,6 @@ body.dark {
 }
 
 body {
-  margin: 0;
-  padding: 0;
   min-height: 100%;
   min-width: 100%;
 }
@@ -58,7 +56,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
-  min-height: calc(100vh - 82px);
+  min-height: max(calc(100vh - 82px), 750px);
 }
 
 .header
